--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🖼 Get YouTube Thumbnail</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Get YouTube Thumbnail</title>
+       <link rel="stylesheet" href="style.css">
+    <!-- Font Awesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.ico">
     <link rel="manifest" href="site.webmanifest">
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
@@ -21,7 +23,7 @@
 <body>
     <div class="main fw-light">
         <header>
-            <h4 class="display-6 lh-1 text-white">🖼 Get YouTube Thumbnail</h4>
+            <h3 class="display-6 lh-1 text-white"> Get YouTube Thumbnail</h3>
         </header>
         <hr>
         <label for="url" class="form-label small text-white">Enter YouTube video URL (supports .be, shorts, embed, with timestamps
@@ -31,16 +33,16 @@
             onblur="if(this.value == '') { this.value = 'https://www.youtube.com/watch?v=k8mOAV0KJLE'; }"
             value="https://www.youtube.com/watch?v=k8mOAV0KJLE" />
         <div class="buttons">
-            <button class="btn btn-primary fw-light" onclick="dynamicUrl(0)">👁‍🗨 Get 🖼</button>
-            <button class="btn btn-info fw-light" onclick="dynamicUrl(1)">👀 Get Max 🖼</button>
+            <button class="btn btn-primary fw-light" onclick="dynamicUrl(0)">👁‍🗨 Get <i class="fa-solid fa-image" style="color: #e1f814;"></i></button>
+            <button class="btn btn-info fw-light" onclick="dynamicUrl(1)">👀 Get Max <i class="fa-solid fa-images" style="color: #890ef6;"></i></button>
             <button class="btn btn-secondary fw-light" onclick="dynamicUrl(2)">👁 Get Max webp</button>
             <button class="btn btn-success fw-light" onclick="download()">⏬ Download</button>
         </div>
 
         <img class="center-fit" id="img" onclick="fullPage()" title="Click to zoom in/out"
-            src="https://img.youtube.com/vi/k8mOAV0KJLE/maxresdefault.jpg" />
+            src="img/yt thumnail.jpeg" />
         <footer>
-            <a class="text-decoration-none" href="https://developergtm.in/" target="_blank"> @Developergtm.in</a>
+            <a class="text-decoration-none" href="https://sushantgautam.netlify.app/" target="_blank"> @Sushant Gautam</a>
         </footer>
     </div>
     <div id="fullpage" title="Click to zoom in/out" onclick="this.style.display='none';"></div>
